test/fail/if_const.v3
//@execute 0=4
type T(a: bool) #unboxed;

def main(a: int) -> int {
	var x = T(false);
	return if(x.a, 1, 2);
}